--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@material-tailwind/react": "^2.1.10",
+    "@reduxjs/toolkit": "^2.5.1",
     "axios": "^1.7.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -20,6 +21,7 @@
     "react-loading-skeleton": "^3.5.0",
     "react-multi-carousel": "^2.8.5",
     "react-paginate": "^8.2.0",
+    "react-redux": "^9.2.0",
     "react-router": "^7.1.1",
     "react-slick": "^0.30.3",
     "react-toastify": "^11.0.3",
