--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -12,9 +12,15 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@material-tailwind/react": "^2.1.10",
+    "@mui/base": "^5.0.0-beta.69",
+    "@mui/icons-material": "^6.4.5",
+    "@mui/material": "^6.4.5",
+    "@mui/styled-engine": "^6.4.3",
+    "@mui/system": "^6.4.3",
     "@reduxjs/toolkit": "^2.5.1",
     "axios": "^1.7.9",
     "framer-motion": "^12.4.7",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
