--- a/BackEnd/.env
+++ b/BackEnd/.env
@@ -5,3 +5,6 @@ PRV_TOKEN = shhhhh
 OTP_EMAIL = "ahteshamulhasan2@gmail.com"
 OTP_PASSWORD = "hmfa nint vmfu cmra"
 IMAGE_URL = http://localhost:3000/
+
+STORE_ID = ahsho67c1fea109b52
+STORE_PASS= ahsho67c1fea109b52@ssl
