--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@emotion/styled": "^11.14.0",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@heroicons/react": "^2.2.0",
     "@material-tailwind/react": "^2.1.10",
     "@mui/base": "^5.0.0-beta.69",
