--- a/Dashboard/package.json
+++ b/Dashboard/package.json
@@ -23,6 +23,7 @@
     "react-redux": "^9.2.0",
     "react-router": "^7.1.3",
     "react-toastify": "^11.0.3",
+    "recharts": "^2.15.1",
     "tailwindcss": "^4.0.0"
   },
   "devDependencies": {
